src/test/deca/context/invalid/resultats/test_class_return_void-cont.res
./src/test/deca/context/invalid/test_class_return_void.deca:17:9: RValue's type is not compatible with the expected type (type : int; expectedType :void)
